added media queries

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,24 @@ html {
 
 @media only screen and (min-width: 25em) {
 
-  
+
+
+}
+
+@media only screen and (min-width: 38em) {
+
+
+
+}
+
+@media only screen and (min-width: 60em) {
+
+
+
+}
+
+@media only screen and (min-width: 90em) {
+
+
 
 }
