--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@ nav a {
   display: inline-block;
 }
 
-
 .nav .current {
   background-color: #0074d9;
   color: #fff;
@@ -73,21 +72,12 @@ nav {
 
 @media only screen and (min-width: 38em) {
 
-
   .logo {
     text-align: left;
   }
 
-}
-
-@media only screen and (min-width: 60em) {
-
-
-
-}
-
-@media only screen and (min-width: 90em) {
-
-
+  .nav {
+    text-align: right;
+  }
 
 }
