--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,7 @@ nav {
 
 @media only screen and (min-width: 25em) {
 
-  .logo {
-    text-align: center;
-  }
+
 
 }
 
@@ -79,5 +77,17 @@ nav {
   .nav {
     text-align: right;
   }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+
+
+}
+
+@media only screen and (min-width: 90em) {
+
+
 
 }
