--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,9 @@ nav {
 
 @media only screen and (min-width: 25em) {
 
-
+  .logo {
+    text-align: center;
+  }
 
 }
 
@@ -77,17 +79,5 @@ nav {
   .nav {
     text-align: right;
   }
-
-}
-
-@media only screen and (min-width: 60em) {
-
-
-
-}
-
-@media only screen and (min-width: 90em) {
-
-
 
 }
